--- a/pilot/pkg/security/authz/builder/testdata/audit-all-in.yaml
+++ b/pilot/pkg/security/authz/builder/testdata/audit-all-in.yaml
@@ -1,9 +1,9 @@
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: log-all
+  name: audit-all
   namespace: foo
 spec:
-  action: LOG
+  action: AUDIT
   rules:
     - {}
