--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -32,7 +32,7 @@ Makefile*                                                        @istio/wg-test-
 /pkg/kube/                                                       @istio/wg-networking-maintainers
 /pkg/mcp/                                                        @istio/wg-networking-maintainers
 /pkg/queue/                                                      @istio/wg-networking-maintainers
-/pkg/security/                                                   @istio/wg-security-maintainers
+/pkg/security/                                                   @istio/wg-security-maintainers @istio/wg-environments-maintainers
 /pkg/spiffe/                                                     @istio/wg-security-maintainers
 /pkg/test/                                                       @istio/wg-test-and-release-maintainers
 /pkg/tracing/                                                    @istio/wg-policies-and-telemetry-maintainers
