--- a/tools/packaging/common/sidecar.env
+++ b/tools/packaging/common/sidecar.env
@@ -22,6 +22,10 @@
 # If not set, defaults to "REDIRECT".
 # ISTIO_INBOUND_INTERCEPTION_MODE=REDIRECT
 
+# Reroute DNS requests from the VM via the sidecar. Unknown hosts will
+# be resolved using the system resolver
+# ISTIO_META_DNS_CAPTURE="ALL"
+
 # When the interception mode is "TPROXY", the iptables skb mark that is set on
 # every inbound packet to be redirected to Envoy.
 # If not set, defaults to "1337".
