--- a/manifests/charts/istio-control/istio-discovery/values.yaml
+++ b/manifests/charts/istio-control/istio-discovery/values.yaml
@@ -145,24 +145,13 @@ revision: ""
 meshConfig:
 
   # Config for the default ProxyConfig.
-  # Initially using directly the proxy metadata - can also be activated using annotations
-  # on the pod. This is an unsupported low-level API, pending review and decisions on
-  # enabling the feature. Enabling the DNS listener is safe - and allows further testing
-  # and gradual adoption by setting capture only on specific workloads. It also allows
-  # VMs to use other DNS options, like dnsmasq or unbound.
   defaultConfig:
     proxyMetadata:
-      # If empty, agent will not start :15013 DNS listener and will not attempt
+      # EXPERIMENTAL: If empty, agent will not start :15013 DNS listener and will not attempt
       # to connect to Istiod DNS-TLS. This will also disable the core dns sidecar in
       # istiod and the dns-over-tls listener.
       # DNS_AGENT: DNS-TLS
       DNS_AGENT: ""
-
-      # If empty, DNS capture is disabled.
-      # If set, intercept UDP port :53 and redirect to localhost:15013
-      # Currently only 'ALL' capture is supported - we may refine it if we want
-      # finer grained control.
-      # ISTIO_META_DNS_CAPTURE: ALL
 
   # The namespace to treat as the administrative root namespace for Istio configuration.
   # When processing a leaf namespace Istio will search for declarations in that namespace first
@@ -324,6 +313,13 @@ global:
     # Specify which tracer to use. One of: zipkin, lightstep, datadog, stackdriver.
     # If using stackdriver tracer outside GCP, set env GOOGLE_APPLICATION_CREDENTIALS to the GCP credential file.
     tracer: "zipkin"
+
+    # Specify if the sidecar should capture DNS requests and resolve them directly from the sidecar
+    # NOTE: If this option is enabled, the pod's DNS Config will be set to have ndots:4 for faster DNS resolution
+    # of internal names of kubernetes services. Adjust the ndots variable per your environmental constraints.
+    dnsCapture:
+      enabled: true
+      ndots: 4
 
   proxy_init:
     # Base name for the proxy_init container, used to configure iptables.
