--- a/manifests/charts/istiod-remote/values.yaml
+++ b/manifests/charts/istiod-remote/values.yaml
@@ -14,12 +14,6 @@ meshConfig:
       # DNS_AGENT: DNS-TLS
       DNS_AGENT: ""
 
-      # If empty, DNS capture is disabled.
-      # If set, intercept UDP port :53 and redirect to localhost:15013
-      # Currently only 'ALL' capture is supported - we may refine it if we want
-      # finer grained control.
-      # ISTIO_META_DNS_CAPTURE: ALL
-
   # The namespace to treat as the administrative root namespace for Istio configuration.
   # When processing a leaf namespace Istio will search for declarations in that namespace first
   # and if none are found it will search in the root namespace. Any matching declaration found in the root namespace
@@ -119,3 +113,10 @@ global:
 
   # One central istiod controls all remote clusters: disabled by default
   centralIstiod: false
+  proxy:
+    # Specify if the sidecar should capture DNS requests and resolve them directly from the sidecar
+    # NOTE: If this option is enabled, the pod's DNS Config will be set to have ndots:4 for faster DNS resolution
+    # of internal names of kubernetes services. Adjust the ndots variable per your environmental constraints.
+    dnsCapture:
+      enabled: true
+      ndots: 4
