--- a/manifests/profiles/default.yaml
+++ b/manifests/profiles/default.yaml
@@ -178,6 +178,9 @@ spec:
         excludeInboundPorts: ""
         autoInject: enabled
         tracer: "zipkin"
+        dnsCapture:
+          enabled: false
+          ndots: 4
       proxy_init:
         image: proxyv2
         resources:
