--- a/manifests/charts/istiod-remote/values.yaml
+++ b/manifests/charts/istiod-remote/values.yaml
@@ -118,5 +118,5 @@ global:
     # NOTE: If this option is enabled, the pod's DNS Config will be set to have ndots:4 for faster DNS resolution
     # of internal names of kubernetes services. Adjust the ndots variable per your environmental constraints.
     dnsCapture:
-      enabled: true
+      enabled: false
       ndots: 4
