--- a/manifests/charts/global.yaml
+++ b/manifests/charts/global.yaml
@@ -113,7 +113,7 @@ global:
     # NOTE: If this option is enabled, the pod's DNS Config will be set to have ndots:4 for faster DNS resolution
     # of internal names of kubernetes services. Adjust the ndots variable per your environmental constraints.
     dnsCapture:
-      enabled: true
+      enabled: false
       ndots: 4
 
   proxy_init:
