--- a/manifests/charts/istiod-remote/files/gen-istiod-remote.yaml
+++ b/manifests/charts/istiod-remote/files/gen-istiod-remote.yaml
@@ -391,11 +391,11 @@ data:
             fieldRef:
               fieldPath: metadata.labels['service.istio.io/canonical-revision']
         # To prevent Envoy from unnecessarily trying to run through DNS search domains first
-        # for every DNS query. ndots 0 forces it to resolve the hostname as is first before
+        # for every DNS query. ndots 1 forces it to resolve a host like example.com as is first before
         # appending the DNS search domains to the query.
         # This environment variable is used by c-ares DNS library that envoy uses.
         - name: RES_OPTIONS
-          value: "options ndots:0"
+          value: "options ndots:1"
         - name: PROXY_CONFIG
           value: |
                  {{ protoToJSON .ProxyConfig }}
