--- a/tests/integration/iop-integration-test-defaults.yaml
+++ b/tests/integration/iop-integration-test-defaults.yaml
@@ -10,6 +10,7 @@ spec:
   values:
     global:
       proxy:
+        image: "docker.io/dio123/proxyv2:release-1.7-ares-flag-nosearch.0"
         resources:
           requests:
             cpu: 10m
