Namespace all addons
https://github.com/istio/istio/issues/26037

--- a/samples/addons/extras/prometheus-operator.yaml
+++ b/samples/addons/extras/prometheus-operator.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: envoy-stats-monitor
+  namespace: istio-system
   labels:
     monitoring: istio-proxies
     release: istio
@@ -33,6 +34,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: istio-component-monitor
+  namespace: istio-system
   labels:
     monitoring: istio-components
     release: istio
