--- a/releasenotes/notes/dr-analyzer.yaml
+++ b/releasenotes/notes/dr-analyzer.yaml
@@ -1,7 +1,7 @@
 apiVersion: release-notes/v2
 kind: feature
 area: networking
-releaseNotes: |
+securityNotes: |
   *Added* Analyzer warning for DestinationRule not using CaCertificates to validate server identity.
 upgradeNotes: |
-  Upgrade istioctl to help find this warning when using `istioctl analyze`.
+  Upgrade istioctl to help find DestinationRule configurations with no CaCertificates to validate server identity when using `istioctl analyze`.
