small revisions based on comments

--- a/releasenotes/notes/25302.yaml
+++ b/releasenotes/notes/25302.yaml
@@ -9,6 +9,5 @@ issue:
 # releaseNotes is a markdown listing of any user facing changes. This will appear in the
 # release notes.
 releaseNotes: |
-  *Added* code to kubesource and analyzers, build a flat map with the path of the field in the YAML resource as the key,
-  and its line number as the value, to help analyzers find the error line number. The error message in the command line
-  will display the exact error line number after applying this feature.
+  *Improved* `istioctl analyze` to find the exact line number with configuration errors when analyzing yaml files.
+  Before, it would return the first line of the resource with the error.
