--- a/releasenotes/notes/24471.yaml
+++ b/releasenotes/notes/24471.yaml
@@ -5,4 +5,4 @@ issue:
   - 24471
 
 releaseNotes: |
-  *Added* 'istioctl analyze' now warns if deprecated mixer resources are present
+  **Added** 'istioctl analyze' now warns if deprecated mixer resources are present
