--- a/releasenotes/notes/25746.yaml
+++ b/releasenotes/notes/25746.yaml
@@ -4,4 +4,4 @@ area: traffic-management
 issue:
 - 25744
 releaseNotes: |
-  *Added* support for injecting istio-cni into `k8s.v1.cni.cncf.io/networks` annotation with pre-existing value that uses JSON notation.
+  **Added** support for injecting istio-cni into `k8s.v1.cni.cncf.io/networks` annotation with pre-existing value that uses JSON notation.
