--- a/releasenotes/notes/add-release-notes-generation.yaml
+++ b/releasenotes/notes/add-release-notes-generation.yaml
@@ -4,5 +4,5 @@ area: documentation
 issue:
 - https://github.com/istio/istio/issues/23622
 releaseNotes: |
-  *Added* support for autogenerating release notes based off of a file present in the /releasenotes/notes directory.
+  **Added** support for autogenerating release notes based off of a file present in the /releasenotes/notes directory.
 
