--- a/releasenotes/notes/fix-nodeport-meshnetwork.yaml
+++ b/releasenotes/notes/fix-nodeport-meshnetwork.yaml
@@ -2,4 +2,4 @@ apiVersion: release-notes/v2
 kind: bug-fix
 area: installation
 releaseNotes: |
-  *Fixed* an issue preventing NodePort services from being used as the `registryServiceName` in `meshNetworks`.
+  **Fixed** an issue preventing NodePort services from being used as the `registryServiceName` in `meshNetworks`.
