--- a/releasenotes/notes/nonroot-gateway.yaml
+++ b/releasenotes/notes/nonroot-gateway.yaml
@@ -4,4 +4,4 @@ area: installation
 issue:
 - 23379
 releaseNotes: |
-  *Improved* gateway deployments to run as non-root by default.
+  **Improved** gateway deployments to run as non-root by default.
