--- a/releasenotes/notes/service-select-workload-entry.yaml
+++ b/releasenotes/notes/service-select-workload-entry.yaml
@@ -4,4 +4,4 @@ area: networking
 issue:
 - 23683
 releaseNotes: |
-  *Added* support for Kubernetes Services to select WorkloadEntries.
+  **Added** support for Kubernetes Services to select WorkloadEntries.
