--- a/releasenotes/notes/24554.yaml
+++ b/releasenotes/notes/24554.yaml
@@ -7,5 +7,4 @@ issue:
 # releaseNotes is a markdown listing of any user facing changes. This will appear in the
 # release notes.
 releaseNotes: |
-  *Added*
-  - Enable the workload cert rotate automatically in VM
+  **Added** Enable the workload cert rotate automatically in VM
