--- a/releasenotes/notes/24737.yaml
+++ b/releasenotes/notes/24737.yaml
@@ -7,7 +7,7 @@ issue:
   - 11130
 
 releaseNotes: |
-  *Added* config option `values.global.proxy.holdApplicationUntilProxyStarts`,
+  **Added** config option `values.global.proxy.holdApplicationUntilProxyStarts`,
   which causes the sidecar injector to inject the sidecar at the start of the
   pod's container list and configures it to block the start of all other
   containers until the proxy is ready.  This option is disabled by default.
