--- a/releasenotes/notes/25519.yaml
+++ b/releasenotes/notes/25519.yaml
@@ -4,5 +4,5 @@ area: telemetry
 issue:
 - 25154
 releaseNotes: |
-  *Removed* the `pilot_xds_eds_instances` and `pilot_xds_eds_all_locality_endpoints` Istiod metrics, which were not
+  **Removed** the `pilot_xds_eds_instances` and `pilot_xds_eds_all_locality_endpoints` Istiod metrics, which were not
   accurate.
