--- a/releasenotes/notes/25678.yaml
+++ b/releasenotes/notes/25678.yaml
@@ -4,4 +4,4 @@ area: traffic-management
 issue:
 - 25678
 releaseNotes: |
-  *Fixed* remove endpoints when the new labels in `WorkloadEntry` do not match the `workloadSelector` in `ServiceEntry`.
+  **Fixed** remove endpoints when the new labels in `WorkloadEntry` do not match the `workloadSelector` in `ServiceEntry`.
