--- a/releasenotes/notes/26001.yaml
+++ b/releasenotes/notes/26001.yaml
@@ -5,5 +5,4 @@ issue:
   - 25339
 
 releaseNotes: |
-  *Added*
-  - sets timeout to fetch workload certs to 0 because workload certs are guaranteed to exist, making a timeout irrelevant.
+  **Added** sets timeout to fetch workload certs to 0 because workload certs are guaranteed to exist, making a timeout irrelevant.
