--- a/releasenotes/notes/add-sni-host.yaml
+++ b/releasenotes/notes/add-sni-host.yaml
@@ -4,4 +4,4 @@ area: networking
 issue:
 - 25691
 releaseNotes: |
-  *Fixed* SNI host routing issue when user uses sniHosts match in virtual service
+  **Fixed** SNI host routing issue when user uses sniHosts match in virtual service
