--- a/releasenotes/notes/agent-metrics.yaml
+++ b/releasenotes/notes/agent-metrics.yaml
@@ -4,5 +4,5 @@ area: telemetry
 issue:
 - 22825
 releaseNotes: |
-  *Added* Prometheus metrics to istio-agent.
-  *Fixed* Prometheus [metrics merging](/docs/ops/integrations/prometheus/#option-1-metrics-merging) to not drop Envoy metrics during application failures.
+  **Added** Prometheus metrics to istio-agent.
+  **Fixed** Prometheus [metrics merging](/docs/ops/integrations/prometheus/#option-1-metrics-merging) to not drop Envoy metrics during application failures.
