--- a/releasenotes/notes/auto-mtls-headless.yaml
+++ b/releasenotes/notes/auto-mtls-headless.yaml
@@ -4,4 +4,4 @@ area: networking
 issue:
 - 24319
 releaseNotes: |
-  *Fixed* an issue where headless services without sidecars were incorrectly sent mTLS rtaffic
+  **Fixed** an issue where headless services without sidecars were incorrectly sent mTLS rtaffic
