--- a/releasenotes/notes/crd-webhook-v1.yaml
+++ b/releasenotes/notes/crd-webhook-v1.yaml
@@ -5,7 +5,7 @@ issue:
 - 18771
 - 18838
 releaseNotes: |
-  *Upgraded* the CRD and Webhook versions to `v1`.
+  **Upgraded** the CRD and Webhook versions to `v1`.
 upgradeNotes:
   title: Require Kubernetes 1.16+
   content: Kubernetes 1.16+ is now required for installation.
