--- a/releasenotes/notes/endpoint-before-pod.yaml
+++ b/releasenotes/notes/endpoint-before-pod.yaml
@@ -4,4 +4,4 @@ area: networking
 issue:
 - 25112
 releaseNotes: |
-  *Fixed* an issue when high pod churn rate can cause Istiod to get stuck.
+  **Fixed** an issue when high pod churn rate can cause Istiod to get stuck.
