--- a/releasenotes/notes/ingress-named-port.yaml
+++ b/releasenotes/notes/ingress-named-port.yaml
@@ -4,4 +4,4 @@ area: networking
 issue:
 - 23052
 releaseNotes: |
-  *Improved* support for Ingress by allowing named port references.
+  **Improved** support for Ingress by allowing named port references.
