--- a/releasenotes/notes/min-k8-ver-for-1.8.yaml
+++ b/releasenotes/notes/min-k8-ver-for-1.8.yaml
@@ -4,4 +4,4 @@ area: installation
 issue:
 - 25793
 releaseNotes: |
-  *Added* Istio 1.8 supports kubernetes versions 1.17 to 1.19.
+  **Added** Istio 1.8 supports kubernetes versions 1.17 to 1.19.
