--- a/releasenotes/notes/prom-rewrite.yaml
+++ b/releasenotes/notes/prom-rewrite.yaml
@@ -4,4 +4,4 @@ area: telemetry
 issue:
 - 21366
 releaseNotes: |
-  *Enabled* Prometheus [metrics merging](/docs/ops/integrations/prometheus/#option-1-metrics-merging) by default.
+  **Enabled** Prometheus [metrics merging](/docs/ops/integrations/prometheus/#option-1-metrics-merging) by default.
