--- a/releasenotes/notes/xds-v3.yaml
+++ b/releasenotes/notes/xds-v3.yaml
@@ -4,4 +4,4 @@ area: networking
 issue:
 - 19885
 releaseNotes: |
-  *Updated* the XDS api to serve XDS v3 by default. v2 is still available for legacy sidecar connections.
+  **Updated** the XDS api to serve XDS v3 by default. v2 is still available for legacy sidecar connections.
