--- a/pkg/test/echo/docker/Dockerfile.app_sidecar
+++ b/pkg/test/echo/docker/Dockerfile.app_sidecar
@@ -14,6 +14,10 @@ RUN apt-get update && \
       iptables \
       iproute2 \
       sudo \
+      lsof \
+      net-tools \
+      dnsutils \
+      curl \
    && apt-get upgrade -y \
    && apt-get clean \
    && rm -rf  /var/log/*log /var/lib/apt/lists/* /var/log/apt/* /var/lib/dpkg/*-old /var/cache/debconf/*-old
